--- a/shared/package.json
+++ b/shared/package.json
@@ -1,7 +1,13 @@
 {
   "name": "shared",
   "version": "1.0.0",
-  "main": "types/index.ts",
-  "types": "types/index.ts"
+  "main": "types/index.js",
+  "types": "types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./types/index.d.ts",
+      "default": "./types/index.js"
+    }
+  }
 }
 
