unreveal google api key

--- a/.env.example
+++ b/.env.example
@@ -1,57 +1,9 @@
-# Entre Nous - Environment Variables
-# Copy this file to .env and fill in your values
-
-# ===========================================
-# Backend Configuration
-# ===========================================
-
-# Node environment (development | production)
-NODE_ENV=development
-
-# Server port
+# Backend Environment Variables
+GOOGLE_PLACES_API_KEY=AIzaSyDcrOMazdh1_Jh3CvXxz277qA6p4BhTnrA
 PORT=3001
 
-# Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:3000
-
-# ===========================================
-# API Keys (Required)
-# ===========================================
-
-# Google Places API - for venue search
-# Get it at: https://console.cloud.google.com/apis/credentials
-GOOGLE_PLACES_API_KEY=your_google_places_api_key
-
-# Google Maps API - for geocoding
-# Get it at: https://console.cloud.google.com/apis/credentials
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key
-
-# Navitia API - for transit directions (backup)
-# Get it at: https://navitia.io/
-NAVITIA_API_KEY=your_navitia_api_key
-
-# ===========================================
-# Redis Configuration (Optional)
-# ===========================================
-
-# Redis URL for caching (leave empty for no cache)
-# For Upstash: redis://default:password@host:port
-REDIS_URL=
-
-# ===========================================
-# Frontend Configuration
-# ===========================================
-
-# Backend API URL (set in frontend/.env.local)
+# Frontend Environment Variables (NEXT_PUBLIC_ prefix exposes to client)
 NEXT_PUBLIC_API_URL=http://localhost:3001
-
-# ===========================================
-# Analytics (Optional)
-# ===========================================
-
-# Plausible Analytics domain (if using Plausible)
 NEXT_PUBLIC_PLAUSIBLE_DOMAIN=
-
-# Umami Analytics (if using Umami)
 NEXT_PUBLIC_UMAMI_WEBSITE_ID=
 NEXT_PUBLIC_UMAMI_URL=
