--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env.local and fill in your values
 
 # Backend API URL
-NEXT_PUBLIC_API_URL=http://localhost:3001
+NEXT_PUBLIC_API_URL=https://backend-production-fa07.up.railway.app
 
 # Plausible Analytics (optional)
 # Your domain registered with Plausible
