--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Entre Nous - Paris Meeting Point Finder",
-  "short_name": "Entre Nous",
+  "name": "Le Middle - Paris Meeting Point Finder",
+  "short_name": "Le Middle",
   "description": "Find the perfect meeting spot in Paris that is equidistant for everyone",
   "start_url": "/",
   "display": "standalone",
